mtls-ambassador/envoy.yaml
static_resources:
    listeners:
        - name: listener_0
          address:
              socket_address:
                  address: 0.0.0.0
                  port_value: 8443
          filter_chains:
              - filters:
                    - name: envoy.filters.network.http_connection_manager
                      typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                          stat_prefix: ingress_http
                          route_config:
                              name: local_route
                              virtual_hosts:
                                  - name: backend
                                    domains: ["*"]
                                    routes:
                                        - match:
                                              prefix: "/"
                                          route:
                                              cluster: service_b
                          http_filters:
                              - name: envoy.filters.http.router
                transport_socket:
                    name: envoy.transport_sockets.tls
                    typed_config:
                        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
                        common_tls_context:
                            tls_certificates:
                                - certificate_chain:
                                      filename: "/etc/envoy/certs/envoy_a.crt"
                                  private_key:
                                      filename: "/etc/envoy/certs/envoy_a.key"
                            validation_context:
                                trusted_ca:
                                    filename: "/etc/envoy/certs/ca.crt"

    clusters:
        - name: service_b
          connect_timeout: 0.25s
          type: strict_dns
          lb_policy: round_robin
          load_assignment:
              cluster_name: service_b
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: service_b
                                      port_value: 80
          transport_socket:
              name: envoy.transport_sockets.tls
              typed_config:
                  "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
                  common_tls_context:
                      tls_certificates:
                          - certificate_chain:
                                filename: "/etc/envoy/certs/client.crt"
                            private_key:
                                filename: "/etc/envoy/certs/client.key"
                      validation_context:
                          trusted_ca:
                              filename: "/etc/envoy/certs/ca.crt"
